--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         content="Bienvenido a la Cafetería Concepción, donde podrás disfrutar de delicioso café y ambiente acogedor en el corazón de Concepción, Chile.">
     <meta name="keywords" content="cafetería, café, Concepción, Chile, pasteles, menú">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-    <link rel="stylesheet" href="../css/main.css">
+    <link rel="stylesheet" href="./css/main.css">
 </head>
 
 <body>
